--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: '>=3.3.4 <4.0.0'
 
 dependencies:
+  change_app_package_name: ^1.3.0
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
   image: ^4.2.0
   image_picker: ^1.1.2
   intl: ^0.19.0
@@ -27,3 +29,15 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+
+flutter_launcher_icons:
+  android: "ic_launcher"
+  ios: false
+  image_path: "assets/logo.png"
+  min_sdk_android: 21
+  web:
+    generate: false
+  windows:
+    generate: false
+  macos:
+    generate: false
