--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: forgetit
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.0
+version: 1.0.1+1
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
