--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: forgetit
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.0.1+1
+version: 1.0.2+2
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
@@ -14,6 +14,7 @@ dependencies:
   image: ^4.2.0
   image_picker: ^1.1.2
   intl: ^0.19.0
+  package_info_plus: ^8.0.0
   path: ^1.9.0
   path_provider: ^2.1.3
   sqflite: ^2.3.3+1
