--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: forgetit
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.0.6+6
+version: 1.0.7+7
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
@@ -17,6 +17,7 @@ dependencies:
   package_info_plus: ^8.0.0
   path: ^1.9.0
   path_provider: ^2.1.3
+  share_plus: ^10.1.2
   sqflite: ^2.3.3+1
   sqflite_common_ffi: ^2.3.3
   url_launcher: ^6.3.0
